--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="640" />
     <meta property="og:url" content="http://graduo.shop" />
-    <meta property="og:image" content="http://graduo.shop/logo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- font CDN -->
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Gradu</title>
+    <title>그라듀</title>
   </head>
   <body>
     <div id="root"></div>
