feat: meta tag og 수정

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="640" />
     <meta property="og:url" content="http://graduo.shop" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:image" content="http://graduo.shop/asset/logo.png" />
+    <meta property="og:description" content="졸업작품 판매 사이트" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- font CDN -->
